*** Changelog ***

= 6.8.0 - 2022-xx-xx =

= 6.7.0 - 2022-09-06 =
* Fix - Check payment method before updating payment method title.
* Fix - Use the eslint config at the root of the repo.

= 6.6.0 - 2022-08-17 =
* Fix - Fix "Pending" text instead of numeric amount on Payment Request button on iOS.

= 6.5.1 - 2022-08-01 =
* Fix - Stripe Link missing styles and logo for email trigger button.
* Fix - Stripe Link fatal error on `get_upe_enabled_payment_method_ids` method.
* Fix - Remove Link beta headers on checkout.

= 6.5.0 - 2022-07-28 =
* Add - Stripe Link: Add beta headers for Stripe server requests
* Add - Stripe Link payment method option in admin
* Add - Stripe Link payment method on checkout form
* Add - Stripe Link payment method on blocks checkout form

= 6.4.3 - 2022-06-30 =
* Fix - Replace unnecessary throws with empty string when keys are invalid.

= 6.4.2 - 2022-06-29 =
* Fix - Fix terminal location creation if site title is missing.
* Fix - Add compatibility with WooCommerce 6.6.

= 6.4.1 - 2022-06-01 =
* Fix - Ensure proper URL formatting.

= 6.4.0 - 2022-05-20 =
* Fix - Changed logic for how 'Enabled/Disabled' statuses are shown for payments and payouts capabilities in settings.
* Tweak - Updated the minimum supported versions of WordPress and WooCommerce.

= 6.3.0 - 2022-03-10 =
* Tweak - Remove html from translatable strings.
* Tweak - Revert the deprecation of the 'wc_stripe_hide_payment_request_on_product_page', 'wc_stripe_show_payment_request_on_checkout', and 'wc_stripe_show_payment_request_on_cart' filters.
* Tweak - Address minor styling issues in settings.

= 6.2.0 - 2022-02-17 =
* Add - Add onboarding payment gateway setup methods.
* Fix - Enable Stripe payment method after connecting account.
* Fix - Missing statement descriptor in account summary API when not set in Stripe.

= 6.1.0 - 2022-01-26 =
* Tweak - Use the newly exposed LoadableMask component provided by WooCommerce Blocks to trigger the loading state for Payment Request Buttons.